Bug 1633307 - avoid sending dead wrappers to JS tooltip providers, r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D75295